--- a/lib/ai_todo_list_web/live/todo_live/index.html.heex
+++ b/lib/ai_todo_list_web/live/todo_live/index.html.heex
@@ -1,10 +1,12 @@
 <.header>
-  Listing Todos
-  <:actions>
-    <.link patch={~p"/todos/new"}>
-      <.button>New Todo</.button>
-    </.link>
-  </:actions>
+  <.live_component
+    module={AiTodoListWeb.TodoLive.FormComponent}
+    id={:new}
+    title={@page_title}
+    action={@live_action}
+    todo={@todo}
+    patch={~p"/todos"}
+  />
 </.header>
 
 <.table
@@ -12,15 +14,14 @@
   rows={@streams.todos}
   row_click={fn {_id, todo} -> JS.navigate(~p"/todos/#{todo}") end}
 >
-  <:col :let={{_id, todo}} label="Text"><%= todo.text %></:col>
-  <:col :let={{_id, todo}} label="Completed"><%= todo.completed %></:col>
-  <:col :let={{_id, todo}} label="Embedding"><%= todo.embedding %></:col>
-  <:action :let={{_id, todo}}>
-    <div class="sr-only">
-      <.link navigate={~p"/todos/#{todo}"}>Show</.link>
-    </div>
-    <.link patch={~p"/todos/#{todo}/edit"}>Edit</.link>
-  </:action>
+  <:col :let={{_id, todo}} label="Your todos"><%= todo.text %></:col>
+  <:col :let={{_id, todo}} label="Completed">
+    <%= if todo != nil && todo.completed do %>
+      <input type="checkbox" checked disabled>
+      <% else %>
+      <input type="checkbox" disabled>
+      <% end %>
+  </:col>
   <:action :let={{id, todo}}>
     <.link
       phx-click={JS.push("delete", value: %{id: todo.id}) |> hide("##{id}")}
@@ -30,14 +31,3 @@
     </.link>
   </:action>
 </.table>
-
-<.modal :if={@live_action in [:new, :edit]} id="todo-modal" show on_cancel={JS.patch(~p"/todos")}>
-  <.live_component
-    module={AiTodoListWeb.TodoLive.FormComponent}
-    id={@todo.id || :new}
-    title={@page_title}
-    action={@live_action}
-    todo={@todo}
-    patch={~p"/todos"}
-  />
-</.modal>
