--- a/lib/ai_todo_list_web/live/todo_live/index.html.heex
+++ b/lib/ai_todo_list_web/live/todo_live/index.html.heex
@@ -5,14 +5,14 @@
     title={@page_title}
     action={@live_action}
     todo={@todo}
-    patch={~p"/todos"}
+    patch={~p"/"}
   />
 </.header>
 
 <.table
   id="todos"
   rows={@streams.todos}
-  row_click={fn {_id, todo} -> JS.navigate(~p"/todos/#{todo}") end}
+  row_click={fn {_id, todo} -> JS.navigate(~p"/#{todo}") end}
 >
   <:col :let={{_id, todo}} label="Your todos"><%= todo.text %></:col>
   <:col :let={{_id, todo}} label="Completed">
